updated test train method for linear regression on data prep

--- a/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "49a585eb-60d1-4089-a7cd-9d409f81170e",
+       "ref": "3631dc3c-bb8c-4e70-ae75-37c7398701de",
        "rows": [
         [
          "2024-01-04 00:00:00",
@@ -1067,7 +1067,7 @@
        "[427 rows x 9 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "73a9331e-45e2-4857-bb7c-8a5f75c05c83",
+       "ref": "f1a86675-b4d7-4503-a8e7-0bbb4ac76c56",
        "rows": [
         [
          "0",
@@ -4945,7 +4945,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4965,7 +4965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4974,7 +4974,7 @@
        "(427, 60)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4985,7 +4985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -5299,7 +5299,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ded4bb2c-faad-428a-a891-4d472e0b6393",
+       "ref": "e614fcdf-2291-4f92-b35a-c1a8a00585b8",
        "rows": [
         [
          "count",
@@ -6115,7 +6115,7 @@
        "[8 rows x 60 columns]"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6135,7 +6135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -6178,7 +6178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -6499,7 +6499,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "43d11e1c-b804-4429-9e76-3ae3489fb97d",
+       "ref": "9d25e37e-23fe-4678-b426-ce405357fbdb",
        "rows": [
         [
          "0",
@@ -10038,7 +10038,7 @@
        "[427 rows x 60 columns]"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10099,7 +10099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -10438,7 +10438,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6663d859-43ab-45f8-9a7f-458feb2c8028",
+       "ref": "93610660-d905-40eb-bad2-d35967cb6e77",
        "rows": [
         [
          "0",
@@ -14227,7 +14227,7 @@
        "[427 rows x 65 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -14325,7 +14325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -14669,7 +14669,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "5083430c-45b8-481c-9537-b0f403007f15",
+       "ref": "f6922e69-820b-483d-9a27-5fb7d1033fc2",
        "rows": [
         [
          "0",
@@ -18508,7 +18508,7 @@
        "[427 rows x 66 columns]"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18561,7 +18561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -18915,7 +18915,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "e9f9d352-0344-4ebf-abab-e57366998624",
+       "ref": "21b0187b-8072-4f6b-a7e2-6b28b3a62535",
        "rows": [
         [
          "0",
@@ -22854,7 +22854,7 @@
        "[427 rows x 68 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22905,7 +22905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22921,7 +22921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -22973,7 +22973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -22997,10 +22997,10 @@
       "day_of_week_nr                   3.9\n",
       "Length: 62, dtype: float64\n",
       "Initial Features df_prep:\n",
-      " ['New users Mobile', 'Scrolled users', 'First time purchasers', '28-day active users Mobile', 'ARPU', 'New users', 'Event count', 'Sessions cpc', 'Total users', 'week_of_month', 'Item promotion click-through rate', 'Sessions (not set)', 'Bounce rate', 'Item view events', 'E-commerce purchases Mobile', 'Checkouts Mobile', 'Sessions cpm', 'Item-list view events', 'E-commerce purchases', 'Average purchase revenue Mobile', 'Item view events Mobile', 'Sessions email', 'Average purchase revenue', 'Views Mobile', 'Sessions Mobile', 'Average session duration', 'Sessions per user', 'Add to baskets Mobile', 'Purchase revenue Mobile', 'Scrolled users Mobile', 'Item-list view events Mobile', 'Views', 'Sessions other', 'Promotion clicks', 'Engaged sessions Mobile', 'Events per session Mobile', 'Checkouts', 'Bounce rate Mobile', 'season', '28-day active users', 'commercial_season', 'day_of_week_nr', 'Average session duration Mobile', 'Item promotion click-through rate Mobile', 'Engaged sessions', 'One-day active users', 'Sessions', 'Seven-day active users', 'Event count Mobile', 'Sessions referral', 'Sessions organic', 'Seven-day active users Mobile', 'Events per session', 'ARPPU', 'DAU/MAU', 'Add to baskets', 'First time purchasers Mobile', 'Sessions (none)', 'Promotion views', 'Views per user', 'DAU/WAU', 'Purchase revenue']\n",
+      " ['Event count Mobile', 'Sessions email', 'New users', 'One-day active users', 'Sessions (not set)', 'Views per user', 'Sessions organic', 'Average purchase revenue Mobile', 'Sessions cpm', 'Seven-day active users Mobile', 'Scrolled users Mobile', 'E-commerce purchases', 'commercial_season', 'Views Mobile', 'ARPPU', 'Bounce rate', '28-day active users Mobile', 'Sessions cpc', 'First time purchasers Mobile', 'Item view events', 'Average purchase revenue', 'E-commerce purchases Mobile', '28-day active users', 'Item view events Mobile', 'Event count', 'New users Mobile', 'Seven-day active users', 'season', 'day_of_week_nr', 'Events per session', 'Views', 'Bounce rate Mobile', 'Engaged sessions', 'Promotion views', 'Checkouts Mobile', 'ARPU', 'Add to baskets', 'DAU/MAU', 'Promotion clicks', 'Item-list view events', 'Item promotion click-through rate Mobile', 'Sessions (none)', 'Events per session Mobile', 'Purchase revenue Mobile', 'Item-list view events Mobile', 'Checkouts', 'Engaged sessions Mobile', 'week_of_month', 'First time purchasers', 'Sessions other', 'Scrolled users', 'DAU/WAU', 'Sessions', 'Item promotion click-through rate', 'Purchase revenue', 'Average session duration Mobile', 'Sessions Mobile', 'Average session duration', 'Sessions per user', 'Add to baskets Mobile', 'Sessions referral', 'Total users']\n",
       "\n",
       "Removed Features (low variance < 0.100):\n",
-      " ['Item promotion click-through rate Mobile', 'DAU/MAU', 'Sessions per user', 'Item promotion click-through rate', 'Bounce rate', 'DAU/WAU', 'Bounce rate Mobile']\n",
+      " ['Bounce rate Mobile', 'DAU/WAU', 'Item promotion click-through rate', 'Bounce rate', 'Item promotion click-through rate Mobile', 'DAU/MAU', 'Sessions per user']\n",
       "\n",
       "Final Features list:\n",
       " ['Sessions', 'Seven-day active users', '28-day active users', 'New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'One-day active users', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n"
@@ -23036,7 +23036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -23355,7 +23355,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0d26dcf3-9a13-4c72-a2dd-5217445d210d",
+       "ref": "904e9191-c8cb-43e7-8933-d68b64213076",
        "rows": [
         [
          "0",
@@ -26944,7 +26944,7 @@
        "[427 rows x 61 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26964,7 +26964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26973,14 +26973,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Item-list view events', 'Item view events', 'Checkouts', 'E-commerce purchases', 'First time purchasers', 'Promotion views', 'One-day active users', 'Sessions (none)', 'Sessions organic']\n"
+      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Item-list view events', 'One-day active users', 'Sessions (none)']\n"
      ]
     }
    ],
@@ -26997,7 +26997,7 @@
     "corr_matrix = data_no_nulls[numeric].corr()\n",
     "\n",
     "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.8)\n",
-    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.8].index.tolist()\n",
+    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.85].index.tolist()\n",
     "\n",
     "# Remove the target variable itself from the list\n",
     "high_corr_features.remove('Sessions')\n",
@@ -27009,15 +27009,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining features: 47\n",
-      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Events per session', 'Add to baskets', 'Average purchase revenue', 'Purchase revenue', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
+      "Remaining features: 53\n",
+      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Events per session', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
      ]
     }
    ],
@@ -27039,7 +27039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
