added commit for data prep

--- a/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/0_ga4_merch_agg_2024_time_series_pre_proc.ipynb
@@ -3134,10 +3134,10 @@
       "day_of_week_nr                   3.9\n",
       "Length: 62, dtype: float64\n",
       "Initial Features df_prep:\n",
-      " ['Sessions other', 'Checkouts Mobile', 'Events per session Mobile', 'Sessions cpm', 'Add to baskets', 'Engaged sessions Mobile', 'Purchase revenue', 'week_of_month', 'Scrolled users', 'E-commerce purchases', 'DAU/MAU', 'New users Mobile', 'Item promotion click-through rate Mobile', 'E-commerce purchases Mobile', 'Engaged sessions', 'Promotion views', 'Event count Mobile', 'Average purchase revenue', 'Item view events Mobile', 'Views', 'Average session duration', '28-day active users', 'DAU/WAU', 'Scrolled users Mobile', 'Total users', 'Sessions (none)', 'Promotion clicks', 'Sessions Mobile', 'commercial_season', 'day_of_week_nr', 'Sessions per user', 'One-day active users', 'Bounce rate Mobile', 'Views per user', 'Sessions cpc', 'ARPU', 'season', 'First time purchasers Mobile', 'Sessions referral', 'ARPPU', 'Views Mobile', 'Events per session', 'Average purchase revenue Mobile', 'Sessions', 'Item-list view events', 'Item view events', 'Checkouts', 'Bounce rate', 'First time purchasers', 'Purchase revenue Mobile', 'Item promotion click-through rate', 'New users', 'Average session duration Mobile', 'Sessions email', 'Sessions (not set)', 'Sessions organic', '28-day active users Mobile', 'Seven-day active users Mobile', 'Event count', 'Item-list view events Mobile', 'Seven-day active users', 'Add to baskets Mobile']\n",
+      " ['Item promotion click-through rate Mobile', 'Event count', 'Average purchase revenue Mobile', 'Engaged sessions', '28-day active users', 'Item-list view events Mobile', 'Scrolled users', 'Promotion views', 'Sessions other', 'day_of_week_nr', 'Total users', 'Events per session Mobile', 'First time purchasers', 'Sessions cpc', 'Purchase revenue', 'Item view events Mobile', 'First time purchasers Mobile', 'Sessions cpm', 'Sessions', 'Item promotion click-through rate', 'ARPPU', 'E-commerce purchases', 'Events per session', 'Views Mobile', 'Seven-day active users Mobile', 'One-day active users', 'New users Mobile', 'Checkouts Mobile', 'week_of_month', 'Checkouts', 'Average purchase revenue', 'Sessions email', 'Add to baskets', 'Bounce rate', 'Sessions Mobile', 'Item view events', 'Bounce rate Mobile', 'Views', 'ARPU', 'Event count Mobile', 'New users', 'Purchase revenue Mobile', 'Sessions per user', 'Average session duration Mobile', 'season', 'Seven-day active users', 'DAU/WAU', 'Engaged sessions Mobile', 'Sessions (not set)', 'Item-list view events', 'DAU/MAU', 'Sessions referral', 'Add to baskets Mobile', '28-day active users Mobile', 'commercial_season', 'Sessions (none)', 'Average session duration', 'Scrolled users Mobile', 'Views per user', 'E-commerce purchases Mobile', 'Promotion clicks', 'Sessions organic']\n",
       "\n",
       "Removed Features (low variance < 0.100):\n",
-      " ['Bounce rate Mobile', 'DAU/WAU', 'Bounce rate', 'Item promotion click-through rate', 'DAU/MAU', 'Item promotion click-through rate Mobile', 'Sessions per user']\n",
+      " ['Item promotion click-through rate Mobile', 'Sessions per user', 'DAU/WAU', 'Item promotion click-through rate', 'DAU/MAU', 'Bounce rate', 'Bounce rate Mobile']\n",
       "\n",
       "Final Features list:\n",
       " ['Sessions', 'Seven-day active users', '28-day active users', 'New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Events per session', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'One-day active users', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (none)', 'Sessions (not set)', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr']\n"
@@ -3595,7 +3595,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Item-list view events', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'First time purchasers', 'Total users', 'Promotion views', 'One-day active users', 'Sessions (none)', 'Sessions organic']\n"
+      "Features too highly correlated with 'Sessions' to drop: ['New users', 'Scrolled users', 'Engaged sessions', 'Views', 'Event count', 'Item-list view events', 'One-day active users', 'Sessions (none)']\n"
      ]
     }
    ],
@@ -3611,8 +3611,8 @@
     "# Calculate correlation matrix\n",
     "corr_matrix = data_no_nulls[numeric].corr()\n",
     "\n",
-    "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.75)\n",
-    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.75].index.tolist()\n",
+    "# Identify features highly correlated with the target variable \"Sessions\" (correlation > 0.85)\n",
+    "high_corr_features = corr_matrix['Sessions'][corr_matrix['Sessions'] > 0.85].index.tolist()\n",
     "\n",
     "# Remove the target variable itself from the list\n",
     "high_corr_features.remove('Sessions')\n",
@@ -3631,8 +3631,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remaining features: 45\n",
-      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Events per session', 'Average purchase revenue', 'Purchase revenue', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
+      "Remaining features: 53\n",
+      "Remaining features: ['Date', 'Sessions', 'Seven-day active users', '28-day active users', 'Events per session', 'Item view events', 'Add to baskets', 'Checkouts', 'E-commerce purchases', 'Average purchase revenue', 'Purchase revenue', 'First time purchasers', 'Average session duration', 'ARPU', 'ARPPU', 'Views per user', 'Total users', 'Promotion views', 'Promotion clicks', 'Sessions Mobile', 'Seven-day active users Mobile', '28-day active users Mobile', 'New users Mobile', 'Scrolled users Mobile', 'Engaged sessions Mobile', 'Views Mobile', 'Event count Mobile', 'Events per session Mobile', 'Item-list view events Mobile', 'Item view events Mobile', 'Add to baskets Mobile', 'Checkouts Mobile', 'E-commerce purchases Mobile', 'Average purchase revenue Mobile', 'Purchase revenue Mobile', 'First time purchasers Mobile', 'Average session duration Mobile', 'Sessions (not set)', 'Sessions affiliate', 'Sessions cpc', 'Sessions cpm', 'Sessions email', 'Sessions organic', 'Sessions other', 'Sessions referral', 'season', 'commercial_season', 'week_of_month', 'day_of_week_nr', 'is_weekend', 'is_holiday', 'is_major_event_day', 'is_commercial_event_day']\n"
      ]
     }
    ],
