--- a/time_series_forecasting/notebooks/dataset_3/8_ga4_merch_agg_2024_time_series_eval_lstm_pytorch.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/8_ga4_merch_agg_2024_time_series_eval_lstm_pytorch.ipynb
@@ -783,7 +783,34 @@
       "seq length=4 hidden_units=50 nr_episodes=2700 0.004633784294128418\n",
       "seq length=4 hidden_units=50 nr_episodes=3000 -0.000990748405456543\n",
       "seq length=4 hidden_units=100 nr_episodes=0 -0.008344650268554688\n",
-      "seq length=4 hidden_units=100 nr_episodes=300 -0.0019392967224121094\n"
+      "seq length=4 hidden_units=100 nr_episodes=300 -0.0019392967224121094\n",
+      "seq length=4 hidden_units=100 nr_episodes=600 -0.007353305816650391\n",
+      "seq length=4 hidden_units=100 nr_episodes=900 0.00593489408493042\n",
+      "seq length=4 hidden_units=100 nr_episodes=1200 0.005782067775726318\n",
+      "seq length=4 hidden_units=100 nr_episodes=1500 0.008233368396759033\n",
+      "seq length=4 hidden_units=100 nr_episodes=1800 0.007525920867919922\n",
+      "seq length=4 hidden_units=100 nr_episodes=2100 0.009854376316070557\n",
+      "seq length=4 hidden_units=100 nr_episodes=2400 0.012899577617645264\n",
+      "seq length=4 hidden_units=100 nr_episodes=2700 0.01100146770477295\n",
+      "seq length=4 hidden_units=100 nr_episodes=3000 0.010138928890228271\n",
+      "seq length=8 hidden_units=25 nr_episodes=0 -0.11328649520874023\n",
+      "seq length=8 hidden_units=25 nr_episodes=300 -0.04398846626281738\n",
+      "seq length=8 hidden_units=25 nr_episodes=600 -0.020090818405151367\n",
+      "seq length=8 hidden_units=25 nr_episodes=900 -0.015784025192260742\n",
+      "seq length=8 hidden_units=25 nr_episodes=1200 -0.00036454200744628906\n",
+      "seq length=8 hidden_units=25 nr_episodes=1500 -0.005494356155395508\n",
+      "seq length=8 hidden_units=25 nr_episodes=1800 -0.002174854278564453\n",
+      "seq length=8 hidden_units=25 nr_episodes=2100 -0.0004687309265136719\n",
+      "seq length=8 hidden_units=25 nr_episodes=2400 -0.0028296709060668945\n",
+      "seq length=8 hidden_units=25 nr_episodes=2700 -0.0057991743087768555\n",
+      "seq length=8 hidden_units=25 nr_episodes=3000 0.0001996159553527832\n",
+      "seq length=8 hidden_units=50 nr_episodes=0 -0.01711726188659668\n",
+      "seq length=8 hidden_units=50 nr_episodes=300 0.020695865154266357\n",
+      "seq length=8 hidden_units=50 nr_episodes=600 0.010002195835113525\n",
+      "seq length=8 hidden_units=50 nr_episodes=900 0.011573553085327148\n",
+      "seq length=8 hidden_units=50 nr_episodes=1200 0.008128583431243896\n",
+      "seq length=8 hidden_units=50 nr_episodes=1500 0.007628321647644043\n",
+      "seq length=8 hidden_units=50 nr_episodes=1800 0.005821287631988525\n"
      ]
     }
    ],
