--- a/time_series_forecasting/notebooks/dataset_2_store_sales/2_transformation_multiv.ipynb
+++ b/time_series_forecasting/notebooks/dataset_2_store_sales/2_transformation_multiv.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "       <Axes: title={'center': 'Percentage error'}>], dtype=object)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "<Axes: xlabel='date', ylabel='sales'>"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "       <Axes: title={'center': 'Percentage error'}>], dtype=object)"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
        "<Axes: xlabel='date', ylabel='sales'>"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-0.328238</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-0.328238</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-0.328238</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-0.328238</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>-0.328238</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sales  onpromotion\n",
+       "date                             \n",
+       "2013-01-01 -0.328238            0\n",
+       "2013-01-01 -0.328238            0\n",
+       "2013-01-01 -0.328238            0\n",
+       "2013-01-01 -0.328238            0\n",
+       "2013-01-01 -0.328238            0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_scaled.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -461,6 +545,7 @@
    ],
    "source": [
     "series: Series = data[target]\n",
+    "series_scaled = series_scaled.sort_index()\n",
     "figure(figsize=(3 * HEIGHT, HEIGHT / 2))\n",
     "plot_line_chart(\n",
     "    series_scaled.index.to_list(),\n",
@@ -502,7 +587,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31</th>\n",
+       "      <td>-0.107524</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-07</th>\n",
+       "      <td>-0.102713</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-14</th>\n",
+       "      <td>-0.157644</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-21</th>\n",
+       "      <td>-0.204250</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-28</th>\n",
+       "      <td>-0.087915</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sales  onpromotion\n",
+       "date                             \n",
+       "2012-12-31 -0.107524          0.0\n",
+       "2013-01-07 -0.102713          0.0\n",
+       "2013-01-14 -0.157644          0.0\n",
+       "2013-01-21 -0.204250          0.0\n",
+       "2013-01-28 -0.087915          0.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_scaled_agg_w.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +681,7 @@
        "       <Axes: title={'center': 'Percentage error'}>], dtype=object)"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +730,7 @@
        "<Axes: xlabel='date', ylabel='sales'>"
       ]
      },
-     "execution_count": 247,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -604,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +829,7 @@
        "       <Axes: title={'center': 'Percentage error'}>], dtype=object)"
       ]
      },
-     "execution_count": 249,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -709,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -758,12 +927,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "dont apply to test data!!! to be done."
+    "dont apply to test data!!!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -958,68 +1127,204 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31</th>\n",
+       "      <td>-0.107524</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-07</th>\n",
+       "      <td>-0.102713</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-14</th>\n",
+       "      <td>-0.157644</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-21</th>\n",
+       "      <td>-0.204250</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-28</th>\n",
+       "      <td>-0.087915</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "date\n",
-       "2012-12-31   -0.107524\n",
-       "2013-01-07   -0.102713\n",
-       "2013-01-14   -0.157644\n",
-       "2013-01-21   -0.204250\n",
-       "2013-01-28   -0.087915\n",
-       "Freq: W-MON, Name: sales, dtype: float64"
+       "               sales  onpromotion\n",
+       "date                             \n",
+       "2012-12-31 -0.107524          0.0\n",
+       "2013-01-07 -0.102713          0.0\n",
+       "2013-01-14 -0.157644          0.0\n",
+       "2013-01-21 -0.204250          0.0\n",
+       "2013-01-28 -0.087915          0.0"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series_scaled_agg_w.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sales</th>\n",
+       "      <th>onpromotion</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2012-12-31</th>\n",
+       "      <td>-0.107524</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-07</th>\n",
+       "      <td>-0.102713</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-14</th>\n",
+       "      <td>-0.157644</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-21</th>\n",
+       "      <td>-0.204250</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-28</th>\n",
+       "      <td>-0.087915</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               sales  onpromotion\n",
+       "date                             \n",
+       "2012-12-31 -0.107524          0.0\n",
+       "2013-01-07 -0.102713          0.0\n",
+       "2013-01-14 -0.157644          0.0\n",
+       "2013-01-21 -0.204250          0.0\n",
+       "2013-01-28 -0.087915          0.0"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#data_copy=pd.read_csv(filepath)     \n",
-    "train_save, test_save = series_train_test_split(series_scaled_agg_w, trn_pct=0.80)\n",
+    "train_save, test_save = series_train_test_split_multiv(series_scaled_agg_w, trn_pct=0.80)\n",
     "\n",
-    "train_save.to_csv(f\"dataset/series_scaled_agg_w_train.csv\", index=True)\n",
+    "train_save.to_csv(f\"dataset/series_scaled_agg_w_train_multi.csv\", index=True)\n",
     "\n",
-    "test_save.to_csv(f\"dataset/series_scaled_agg_w_test.csv\", index=True)\n",
+    "test_save.to_csv(f\"dataset/series_scaled_agg_w_test_multi.csv\", index=True)\n",
     "    \n",
     "train_save.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
       "DatetimeIndex: 49 entries, 2016-09-12 to 2017-08-14\n",
       "Freq: W-MON\n",
-      "Series name: sales\n",
-      "Non-Null Count  Dtype  \n",
-      "--------------  -----  \n",
-      "49 non-null     float64\n",
-      "dtypes: float64(1)\n",
-      "memory usage: 784.0 bytes\n"
+      "Data columns (total 2 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   sales        49 non-null     float64\n",
+      " 1   onpromotion  49 non-null     float64\n",
+      "dtypes: float64(2)\n",
+      "memory usage: 1.1 KB\n"
      ]
     }
    ],
    "source": [
     "test_save.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
