updates to all models

--- a/time_series_forecasting/notebooks/dataset_3/2_1_ga4_merch_agg_2024_time_series_outliers.ipynb
+++ b/time_series_forecasting/notebooks/dataset_3/2_1_ga4_merch_agg_2024_time_series_outliers.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3670,7 +3670,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## MV2 evaluate"
+    "## Keep Outliers evaluate"
    ]
   },
   {
