--- a/time_series_forecasting/notebooks/dataset_1/_2_3_gira_time_series_transf_aggregation.ipynb
+++ b/time_series_forecasting/notebooks/dataset_1/_2_3_gira_time_series_transf_aggregation.ipynb
@@ -821,6 +821,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train \n",
+    "\n",
+    "\n",
+    "\n",
+    "test_\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
